<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroGastosActivity"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:id="@+id/layoutCadastro1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="top"
        android:orientation="vertical"
        android:id="@+id/layoutTitulo"
        android:paddingTop="15dp"
        android:paddingBottom="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tituloCadastro"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tituloEditar"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/descricaoEditar"
            android:textColor="#908e8e"
            android:id="@+id/descricaoTitulo"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/layoutCadastro4"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelNome"
            android:text="@string/labelNome"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.25" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelCategoria"
            android:text="@string/labelCategoria"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginRight="82dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/layoutCadastro5"
        >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editNome"
            android:paddingBottom="10dp"
            android:width="150dp"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.25" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerEditar"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/labelDescricao"
        android:text="@string/labelDescricao"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editDescricao"
        android:paddingBottom="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/layoutCadastro2"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelValor"
            android:text="@string/labelValor"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.25" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LabelRecibo1"
            android:text="@string/labelRecibo"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginRight="50dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/layoutCadastro3"
        >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editValor"
            android:paddingBottom="10dp"
            android:width="150dp"
            android:inputType="numberDecimal"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:text="@string/btSelecionar"
            android:id="@+id/btImagem"
            />

    </LinearLayout>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:id="@+id/imgRecibo"
        android:src="@drawable/ic_baseline_image_24"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/layoutCadastroBtn"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        >

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:text="Salvar"
            android:id="@+id/btEditar"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            />

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:text="Excluir"
            android:id="@+id/btExcluir"
            />

    </LinearLayout>
</LinearLayout>